force-app/main/default/objects/SS_Segmento_Response__e/SS_Segmento_Response__e.object-meta.xml
<CustomObject>
    <description>Evento que se dispara una vez se ha enviado a SS el segmento y obtenido una respuesta.</description>
    <label>SS Segmento Response</label>
    <pluralLabel>SS Segmento Responses</pluralLabel>
</CustomObject>