force-app/main/default/objects/SS_Segmento_Response__e/fields/error__c.field-meta.xml
<CustomField>
    <fullName>error__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Si ocurre un error en SS al enviar el Segmento, marcar como true</description>
    <label>error</label>
    <type>Checkbox</type>
</CustomField>