force-app/main/default/objects/SS_Segmento_Response__e/fields/Id_Segmento__c.field-meta.xml
<CustomField>
    <fullName>Id_Segmento__c</fullName>
    <description>Id Salesforce del segmento</description>
    <label>Id Segmento</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>