force-app/main/default/objects/SS_Segmento_Response__e/fields/Id_SS_Evento_Medico__c.field-meta.xml
<CustomField>
    <fullName>Id_SS_Evento_Medico__c</fullName>
    <description>Identificador en SS del evento medico asociado al Segmento</description>
    <label>Id SS Evento Médico</label>
    <length>255</length>
    <type>Text</type>
</CustomField>