force-app/main/default/objects/SS_Segmento_Response__e/fields/isDelete__c.field-meta.xml
<CustomField>
    <fullName>isDelete__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Verifica si el evento se dispara para borrar un registro</description>
    <label>isDelete</label>
    <type>Checkbox</type>
</CustomField>