force-app/main/default/objects/SS_Segmento_Response__e/fields/Response_Error__c.field-meta.xml
<CustomField>
    <fullName>Response_Error__c</fullName>
    <description>Mensaje de error de SS al enviar un segmento fallido.</description>
    <label>Response Error</label>
    <length>255</length>
    <type>Text</type>
</CustomField>